# alcheme-protocol

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security-audit.yml
config/: devnet-program-ids.json  license-audit-policy.json
cpi-interfaces/: Cargo.toml  README.md
cpi-interfaces/src/: lib.rs
cpi-interfaces/tests/: cpi_helper_tests.rs
database/migrations/: performance_indexes.sql
docs/: COMMENT_STYLE.md  MEMBERSHIP_ATTESTOR_REGISTRY_ROLLOUT.md  game-chat-integration.md
docs/architecture/: README.md  alcheme-architecture-map.html  architecture-inventory.md  external-app-node-access-product-architecture.md  external-app-registry-v3-stability-model.md  external-app-v3-emergency-authority-matrix.md  external-app-v3-entrypoint-index.md  external-app-v3-evidence-privacy-retention-policy.md  external-app-v3-risk-disclaimer-and-bond-disposition-policy.md  external-app-v3-settlement-asset-policy.md  fork-context-access-model.md  fork-context-access-model.zh-CN.draft.md  governance-strategy-roadmap.md  room-capability-carrier.md  subproject-maps.html  svm-rollup-route.md
docs/integration/: external-program-quickstart.md
docs/ops/: protocol-authority-and-crystal-mint.md
docs/schemas/: extension-manifest.schema.json
examples/game-chat-headless/: README.md
extensions/anchor-signer/: README.md  package.json
extensions/contribution-engine/: README.md  package.json  tsconfig.json
extensions/contribution-engine/program/: Cargo.toml  README.md
extensions/contribution-engine/program/src/: errors.rs  lib.rs  state.rs
extensions/contribution-engine/program/src/instructions/: initialize.rs  ledger.rs  mod.rs  query.rs  record.rs  reference.rs  settle.rs
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/config/: mobileShellCommands.mjs  mobileShellConfig.mjs  nativePhantomDeeplink.mjs  nativeWalletBridge.mjs  xcodeCompat.mjs
frontend/e2e/: accessibility.spec.ts  agent-contribution.spec.ts  circle-crucible-scope.spec.ts  circle-next-level-permission.spec.ts  compose-routing.spec.ts  compose.spec.ts  draft-discussion-workflow.spec.ts  extension-gate.spec.ts  external-app-discovery.spec.ts  feed-thread.spec.ts  ghost-draft.spec.ts  identity-onboarding.spec.ts  knowledge-citation.spec.ts  knowledge-discussion.spec.ts  member-card-follow-mobile.spec.ts  navigation.spec.ts  notification-routing.spec.ts  notifications.spec.ts  plaza-forwarding.spec.ts  profile.spec.ts  seeded-genesis.spec.ts  seeded-reference.spec.ts  smoke.spec.ts  source-material-grounding.spec.ts
frontend/public/: manifest.json  sw.js
frontend/scripts/: dev-mobile-lan.mjs  mobile-shell.mjs  print-mobile-lan-url.mjs
frontend/src/: middleware.ts
frontend/tests/: accessibilityContrastStyles.test.mjs  active-tier-restore.test.mjs  agentAdminPanel.test.mjs  agentAuthorBadge.test.mjs  apiFetchLocale.test.mjs  apolloCirclePostsMerge.test.mjs  authSessionPolicy.test.mjs  bindPostToCircleAuth.test.mjs  browser-only-helper-contract.test.mjs  circle-page-membership-sync.test.mjs  circleAccessPolicyStatic.test.mjs  circleAiDefaults.test.mjs  circleJoinError.test.mjs  (+144 more)
mobile-shell/: README.md  capacitor.config.ts  package-lock.json  package.json
programs/: README.md
programs/access-controller/: Cargo.toml  README.md
programs/access-controller/src/: instructions.rs  lib.rs  state.rs  validation.rs
programs/circle-manager/: Cargo.toml  README.md
programs/circle-manager/src/: instructions.rs  lib.rs  state.rs
programs/circle-manager/tests/: circle_lifecycle_integration.rs  contract_hardening_integration.rs  fork_anchor_integration.rs  knowledge_binding_integration.rs  membership_authority_integration.rs
programs/content-manager/: Cargo.toml  README.md
programs/content-manager/src/: instructions.rs  lib.rs  state.rs  storage.rs  validation.rs
programs/external-app-economics/: Cargo.toml
programs/external-app-economics/src/: lib.rs
programs/external-app-registry/: Cargo.toml  README.md
programs/external-app-registry/src/: instructions.rs  lib.rs  state.rs  validation.rs
programs/identity-registry/: Cargo.toml  README.md
programs/identity-registry/src/: instructions.rs  lib.rs  state.rs  validation.rs
programs/messaging-manager/: Cargo.toml  README.md
programs/messaging-manager/src/: instructions.rs  lib.rs  state.rs  validation.rs
scripts/: audit-node-license-risk.mjs  bootstrap-external-app-governance-role-bindings.ts  bootstrap-external-app-settlement-mint.ts  bootstrap-proof-attestor.ts  check-consistency-covenant.js  circle-lifecycle.mjs  deploy-local-optimized.sh  initialize-programs.ts  inspect-external-app-governance-role-binding.ts  membership-attestor-registry.mjs  run-solana-security-audit.sh  start-local-stack.sh  stop-local-stack.sh  validate-extension-manifest.js
sdk/: .npmrc  README.md  jest.config.cjs  localnet-config.json  package-lock.json  package.json  tsconfig.json
services/indexer-core/: .env.example  Cargo.toml  Dockerfile  README.md
services/indexer-core/src/: main.rs  metrics.rs  metrics_server.rs
services/indexer-core/src/database/: checkpoint.rs  db_writer.rs  db_writer_tests.rs  mod.rs  models.rs  runtime_state.rs  writer.rs
services/indexer-core/src/grpc/: client.rs  mod.rs
services/indexer-core/src/listeners/: event_listener.rs  local_logs_subscriber.rs  local_program_listener.rs  local_rpc_listener.rs  mod.rs
services/indexer-core/src/parsers/: event_parser.rs  event_parser_tests.rs  extensions.rs  mod.rs
services/indexer-core/src/utils/: logger.rs  metrics.rs  mod.rs
shared/: Cargo.toml  README.md
tests/: find_batch_id.js  integration-tests.ts  manifest-validation.test.js  setup-test-environment.ts  test-config.ts  test_pda.js
(+1180 files in other folders)
