[workspace]
members = [
    "shared",
    "cpi-interfaces",
    "programs/identity-registry",
    "programs/event-emitter",
    "programs/access-controller",
    "programs/content-manager",
    "programs/registry-factory",
    "programs/messaging-manager",
    "programs/circle-manager",
    "programs/external-app-registry",
    "extensions/contribution-engine/program",
    # Temporarily commented out due to Solana SDK version conflict
    # "services/indexer-core"
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[profile.release]
overflow-checks = true
opt-level = "z"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
