[package]
name = "circle-manager"
version = "0.1.0"
license = "Apache-2.0"
description = "Circle-based knowledge governance for Alcheme Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "circle_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
alcheme-shared = { path = "../../shared" }
alcheme-cpi = { path = "../../cpi-interfaces" }

[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

