[package]
name = "external-app-economics"
version = "0.1.0"
license = "Apache-2.0"
description = "External App V3 bounded economics program for Alcheme Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "external_app_economics"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
