[package]
name = "identity-registry"
version = "0.1.0"
license = "Apache-2.0"
description = "Identity Registry Program for Alcheme Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
solana-program = "^2.0"
alcheme-shared = { path = "../../shared" }
alcheme-cpi = { path = "../../cpi-interfaces" }

