[package]
name = "alcheme-indexer-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
# Solana & Yellowstone
yellowstone-grpc-client = "4.2.1"
yellowstone-grpc-proto = "4.2.1"
solana-sdk = "2.0"

# Async runtime
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"

# Database
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "macros"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10.4"
base64 = "0.22"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# Config
dotenv = "0.15"

# Utilities
futures = "0.3"
lazy_static = "1.4"
tokio-tungstenite = "0.24"

# Shared types
alcheme-shared = { path = "../../shared" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
base64 = "0.22"

[workspace]
resolver = "2"
