[package]
name = "contribution-engine"
version = "0.1.0"
license = "Apache-2.0"
description = "Contribution tracking and reputation settlement engine for Alcheme Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contribution_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
alcheme-shared = { path = "../../../shared" }
alcheme-cpi = { path = "../../../cpi-interfaces" }
identity-registry = { path = "../../../programs/identity-registry", features = ["cpi"] }
